# game

./: .mise.toml  Cargo.toml  README.md  index.html  pack.sh
.github/workflows/: deploy.yml
.zed/: tasks.json
app/: Cargo.toml
apps/bevy-breakout-main/src/: main.rs
apps/editor/: Cargo.toml
assets/: Scene.blend  Scene.blend1  Scene.glb  registry.json  untitled.blend  untitled.blend1
scripts/: block.lua  entity.lua  player.lua
src/: level.rs  lua.rs  main.rs  systems.rs
