[package]
name = "game"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy]
features = ["dynamic"]

[profile.release]
strip = "debuginfo"
lto = "thin"

[dependencies]
anyhow = "1.0.86"
bevy = "0.13.2"
bevy_asset_loader = { version = "0.20.2", features = ["3d"] }
bevy_gltf_components = "0.5.1"
bevy_rapier3d = { version = "0.26.0", features = ["debug-render-3d"] }
bevy_registry_export = "0.3.1"
piccolo = "0.3.3"
